revise r4961.  "minimum_free_disk_space" parameter has to be specified in both gfmd.conf and gfarm2.conf. This fixes #157 - minimum_free_disk_space should be removed from man page of gfarm2.conf

--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1020,8 +1020,8 @@ The free space value may have a suffix like ``k'' (kilo bytes),
 The default size is 128M bytes.
 </para>
 <para>
-This directive is available in gfmd.conf.  After restarting the gfmd,
-it is effective.
+This directive has to be specified in both gfarm2.conf and gfmd.conf.
+After restarting the gfmd and the Gfarm client, it is effective.
 </para>
 <para>For example,</para>
 <literallayout>
