--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man5/gfarm2.conf.5.docbook
@@ -983,8 +983,8 @@ CPU負荷のクライアントキャッシュにここで指定されるCPU負荷が加えられます。
 デフォルトは128Mバイトです。
 </para>
 <para>
-この指定は gfmd.conf で有効です。
-有効にするためには gfmd を再起動する必要があります。
+このパラメータは、gfarm2.confとgfmd.confの両方で指定する必要があります。
+有効にするためには gfmd および Gfarmクライアントを再起動する必要があります。
 </para>
 <para>例:</para>
 <literallayout>
