--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "18 December 2010" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "30 December 2010" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm設定ファイル
@@ -651,8 +651,8 @@ CPU負荷のクライアントキャッシュにここで指定されるCPU負荷が加えられます。
 ことができます。
 デフォルトは128Mバイトです。
 
-この指定は gfmd.conf で有効です。
-有効にするためには gfmd を再起動する必要があります。
+このパラメータは、gfarm2.confとgfmd.confの両方で指定する必要があります。
+有効にするためには gfmd および Gfarmクライアントを再起動する必要があります。
 
 例:
 
