--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfdf.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfdf.1.docbook
@@ -39,6 +39,24 @@ Gfarm file system.
 </varlistentry>
 
 <varlistentry>
+<term><option>-h</option></term>
+<listitem>
+<para>Displays numbers in human readable format by adding a prefix multiplier
+symbol like "M" (mega).  Since this option uses powers of 1024,
+"M" means 1,048,576.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-H</option></term>
+<listitem>
+<para>Displays numbers in human readable format by adding a prefix multiplier
+symbol like "M" (mega).  Since this option uses powers of 1000,
+"M" means 1,000,000.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
 <term><option>-n</option></term>
 <listitem>
 <para>Displays hostnames of available Gfarm file system nodes.</para>
