--- a/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
+++ b/gfarm_v2/trunk/man/ja/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "30 December 2010" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "04 1цЬИ 2011" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm└▀─ъе╒ебедеы
@@ -24,7 +24,7 @@ gfarm2.confе╒ебедеыд╧бвgfarmе╫еэе░ещерд╬└▀─ъе╒ебедеыд╟д╣бг
 д╔д┴дщд╬└▀─ъе╒ебедеыдтбв╞▒░ьд╬╩╕╦бд╟╡н╜╥д╖д▐д╣бг
 ╞▒░ьд╬╗╪─ъ╩╕дм╩г┐Їдвд├д┐╛ь╣чд╦д╧бв└шд╦╗╪─ъд╡дьд╞ддд┐╩¤дм═е└шд╡дьд▐д╣бг
 ┤─╢н╩╤┐ЇGFARM_CONFIG_FILEдм└▀─ъд╡дьд╞д╩дд╛ь╣чбв┬хдядъд╦
-ецб╝е╢б╝д╬е█б╝ере╟егеьепе╚еъд╦двды.gfarm2rcе╒ебедеыдЄ╗╚═╤д╖д▐д╣бг
+ецб╝е╢д╬е█б╝ере╟егеьепе╚еъд╦двды.gfarm2rcе╒ебедеыдЄ╗╚═╤д╖д▐д╣бг
 .PP
 gfarm2.confд╧бв░ь╣╘д╦░ь╩╕д╬╖┴╝░д╟└▀─ъд╖д▐д╣бг
 д┐д└д╖бв╣╘╦Ўд╦╩╕╗·``\\''дЄ╡н╜╥д╣дыд│д╚д╦дшд├д╞бв╣╘дЄ╖╤┬│д╡д╗дыд│д╚дм
@@ -540,14 +540,14 @@ gfmd.conf╞тд╬д│д╬╩╕д╟╗╪─ъд╡дьд┐ецб╝е╢дмбв
 \fBadmin_user_gsi_dn \fIDN\fB\fR
 gfmd.conf╞тд╬admin_user╩╕д╟╗╪─ъд╡дьд┐╞├╕вецб╝е╢д╬Subject DNдЄ╗╪─ъд╖д▐д╣бг
 .TP
-\fBlocal_user_map \fIецб╝е╢е▐е├е╫е╒ебедеые╤е╣╠╛\fB\fR
+\fBlocal_user_map \fIецб╝е╢е▐е├е╫е╒ебедеые╤е╣╠╛\fB [\fIе█е╣е╚╠╛\fB:[\fIе▌б╝е╚╚╓╣ц\fB]] \fR
 sharedsecret╟з╛┌д╦дкддд╞бв
 е░еэб╝е╨еыецб╝е╢╠╛д╚еэб╝елеыецб╝е╢╠╛д╬┬╨▒■┤╪╖╕дЄ╡н╜╥д╖д┐
 ецб╝е╢е▐е├е╫е╒ебедеые╤е╣╠╛дЄ╗╪─ъд╖д▐д╣бг
 д│д╬└▀─ъд╧╔м┐▄д╟д╧двдъд▐д╗дєдмбв
 д╜д╬╛ь╣чеэб╝елеыецб╝е╢╠╛дме░еэб╝е╨еыецб╝е╢╠╛д╦╩╤┤╣д╡дьд▐д╣бг
 
-╞▒░ьецб╝е╢б╝д╦┬╨д╖д╞бв
+╞▒░ьецб╝е╢д╦┬╨д╖д╞бв
 ░█д╩дыеэб╝елеыевележеєе╚╠╛дЄ═┐дид╞дддые╒ебедеые╖е╣е╞ере╬б╝е╔дмдвды╛ь╣чдфбв
 еэб╝елеыецб╝е╢╠╛д╚д╧░█д╩дые░еэб╝е╨еыецб╝е╢╠╛дЄ═°═╤д╖д┐дд╛ь╣чбв
 д│д╬е╒ебедеыд╟бв│╞е╬б╝е╔д╬еэб╝елеыд╩ецб╝е╢╠╛д╦┬╨д╖д╞бв├▒░ьд╬
@@ -559,8 +559,8 @@ sharedsecret╟з╛┌д╦дкддд╞бв
 	local_user_map /etc/gfarm/gfarm-usermap
 .fi
 
-ецб╝е╢б╝е▐е├е╫е╒ебедеыд╧бве░еэб╝е╨еыецб╝е╢б╝╠╛д╚
-еэб╝елеыецб╝е╢б╝╠╛дЄбв╢ї╟Єд╟╢ш└┌д├д╞│╞╣╘д╦╡н╜╥д╖д▐д╣бг
+ецб╝е╢е▐е├е╫е╒ебедеыд╧бве░еэб╝е╨еыецб╝е╢╠╛д╚
+еэб╝елеыецб╝е╢╠╛дЄбв╢ї╟Єд╟╢ш└┌д├д╞│╞╣╘д╦╡н╜╥д╖д▐д╣бг
 
 ецб╝е╢е▐е├е╫е╒ебедеыд╬╞т═╞╬у:
 
@@ -571,8 +571,26 @@ sharedsecret╟з╛┌д╦дкддд╞бв
 
 д│д╬╬уд╬1╣╘╠▄д╬╗╪─ъд╟д╧бвд│д╬е╬б╝е╔д╬еэб╝елеыецб╝е╢╠╛fooд╦
 ┬╨д╖д╞е░еэб╝е╨еыецб╝е╢╠╛foobarдм─ъ╡┴д╡дьд╞ддд▐д╣бг
+
+есе┐е╟б╝е┐е╡б╝е╨д╬е█е╣е╚╠╛/е▌б╝е╚╚╓╣цдЄ╗╪─ъд╣дыд╚бв
+└▄┬│└шд╬е╡б╝е╨д┤д╚д╦░█д╩дыецб╝е╢е▐е├е╫е╒ебедеыдЄ┼м═╤д╖д▐д╣бг
+е▌б╝е╚╚╓╣цдЄ╛╩╬мд╖д┐╛ь╣чд╧бве╟е╒ейеые╚д╬е▌б╝е╚╚╓╣ц(601)дЄ╗╚═╤д╖д▐д╣бг
+local_user_map д╧╩г┐Ї▓є╗╪─ъ▓─╟╜д╟д╣бг
+еэб╝елеыецб╝е╢╠╛дм╞▒░ьд╬─ъ╡┴дм╩г┐Їд╬е╒ебедеыд╦┬╕║▀д╣ды╛ь╣чбв║╟╜щд╬─ъ╡┴дм┴к┬Єд╡дьд▐д╣бг
+
+╩г┐Їд╬ецб╝е╢е▐е├е╫е╒ебедеыд╬╬у:
+
+.nf
+	local_user_map /etc/gfarm/gfarm-usermap1-1
+	local_user_map /etc/gfarm/gfarm-usermap1-2
+	local_user_map /etc/gfarm/gfarm-usermap2-1 server2
+	local_user_map /etc/gfarm/gfarm-usermap2-2 server2
+.fi
+
+д│д╬╬уд╟д╧ server2 д╦└▄┬│д╣дыд╚днд╧ gfarm-usermap2-1бвgfarm-usermap2-2 д╬╜ч╚╓д╦┼м═╤д╖д▐д╣бг
+server2 ░╩│░д╦└▄┬│д╣дыд╚днд╧ gfarm-usermap1-1бвgfarm-usermap1-2 д╬╜ч╚╓д╦┼м═╤д╖д▐д╣бг
 .TP
-\fBlocal_group_map \fIе░еыб╝е╫е▐е├е╫е╒ебедеые╤е╣╠╛\fB\fR
+\fBlocal_group_map \fIе░еыб╝е╫е▐е├е╫е╒ебедеые╤е╣╠╛\fB [\fIе█е╣е╚╠╛\fB:[\fIе▌б╝е╚╚╓╣ц\fB]]\fR
 е░еэб╝е╨еые░еыб╝е╫╠╛д╚еэб╝елеые░еыб╝е╫╠╛д╬┬╨▒■┤╪╖╕дЄ╡н╜╥д╖д┐
 е░еыб╝е╫е▐е├е╫е╒ебедеые╤е╣╠╛дЄ╗╪─ъд╖д▐д╣бг
 д│д╬е▐е├е╫е╒ебедеыд╧бдеэб╝елеые╖е╣е╞ерд╬е░еыб╝е╫IDдЄ═°═╤д╣дыgfarm2fsдф
@@ -588,6 +606,10 @@ Globus GridFTPд╬Gfarm DSIд╩д╔д╟═°═╤д╡дьд▐д╣бг
 
 е░еыб╝е╫е▐е├е╫е╒ебедеыд╧бве░еэб╝е╨еые░еыб╝е╫╠╛д╚
 еэб╝елеые░еыб╝е╫╠╛дЄбв╢ї╟Єд╟╢ш└┌д├д╞│╞╣╘д╦╡н╜╥д╖д▐д╣бг
+
+есе┐е╟б╝е┐е╡б╝е╨д╬е█е╣е╚╠╛/е▌б╝е╚╚╓╣цдЄ╗╪─ъд╣дыд╚бв
+└▄┬│└шд╬е╡б╝е╨д┤д╚д╦░█д╩дые░еыб╝е╫е▐е├е╫е╒ебедеыдЄ┼м═╤д╖д▐д╣бг
+╗╪─ъ╩¤╦бд╧ local_user_map д╚╞▒══д╟д╣бг
 .TP
 \fBschedule_cache_timeout \fI╔├┐Ї\fB\fR
 gfarmещеде╓ещеъдм╞т╔Ї┼кд╦╩▌╗¤д╖д╞дддыбве╒ебедеые╖е╣е╞ере╬б╝е╔
@@ -851,8 +873,12 @@ gfarm2.confд╬╩╕╦бдЄBNFд╟╡н╜╥д╣дыд╚бв▓╝╡нд╬дшджд╦д╩дъд▐д╣бг
 	<known_network_statement> ::= "known_network" <hostspec>
 	<admin_user_statement> ::= "admin_user" <string>
 	<admin_user_gsi_dn_statement> ::= "admin_user_gsi_dn" <string>
-	<local_user_map_statement> ::= "local_user_map" <pathname>
-	<local_group_map_statement> ::= "local_group_map" <pathname>
+	<local_user_map_statement> ::= "local_user_map" <local_user_and_group_map_spec>
+	<local_group_map_statement> ::= "local_group_map" <local_user_and_group_map_spec>
+	<local_user_and_group_map_spec> ::=
+		<pathname> |
+		<pathname> <hostname>|
+		<pathname> <hostname> ":" <portnumber>
 	<schedule_cache_timeout_statement> ::= "schedule_cache_timeout" <number>
 	<schedule_idle_load_thresh_statement> ::= "schedule_idle_load_thresh" <load>
 	<schedule_busy_load_thresh_statement> ::= "schedule_busy_load_thresh" <load>
