--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm.3.docbook
@@ -212,6 +212,185 @@ The struct gfs_stat returned by gfs_stat function must be released by
 </refsect2>
 
 <refsect2>
+<title>ACL (Access Control List) OPERATIONS</title>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_init</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function is used for the initilization of an ACL
+structure (gfarm_acl_t), and
+<citerefentry>
+<refentrytitle>gfs_acl_free</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function is used to release the ACL structure.
+<citerefentry>
+<refentrytitle>gfs_acl_dup</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function duplicates an ACL structure.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_create_entry</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function creates an ACL entry (gfarm_acl_entry_t) in
+an ACL structure, and
+<citerefentry>
+<refentrytitle>gfs_acl_get_entry</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function gets an ACL entry from the ACL structure, and
+<citerefentry>
+<refentrytitle>gfs_acl_delete_entry</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function removes an ACL entry from the ACL structure.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_valid</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function checks an ACL structure for validity.
+gfs_acl_check<manvolnum>3</manvolnum> function can check more for
+validity.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_calc_mask</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function calculates and sets an ACL permissions of
+a GFARM_ACL_MASK type entry in an ACL structure.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_get_tag_type</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function gets an ACL tag (gfarm_acl_tag_t) (type of
+ACL entry) from an ACL entry.
+<citerefentry>
+<refentrytitle>gfs_acl_set_tag_type</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function sets an ACL tag of an ACL entry.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_get_permset</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function gets an ACL permission-set
+(gfarm_acl_permset_t) from an ACL entry.
+<citerefentry>
+<refentrytitle>gfs_acl_set_permset</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function an ACL permission-set of an ACL entry.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_add_perm</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function adds an ACL permission (gfarm_acl_perm_t) to
+an ACL permission-set.
+<citerefentry>
+<refentrytitle>gfs_acl_clear_perms</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> clears all ACL permissions from an ACL permission-set.
+<citerefentry>
+<refentrytitle>gfs_acl_delete_perm</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function deletes a permission from an ACL permission-set.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_get_qualifier</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function gets a username/groupname from an ACL entry.
+GFARM_ACL_USER/GFARM_ACL_GROUP tag entries have a username/groupname.
+<citerefentry>
+<refentrytitle>gfs_acl_set_qualifier</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function sets a username/groupname of an ACL entry.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_delete_def_file</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function deletes a Default ACL from a file or directory.
+<citerefentry>
+<refentrytitle>gfs_acl_get_file</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function gets an ACL structure of a file or directory.
+<citerefentry>
+<refentrytitle>gfs_acl_set_file</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function replaces an ACL structure of a file or directory.
+Before using this function, the ACL structure must be sorted by
+gfs_acl_sort<manvolnum>3</manvolnum> function.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_to_text</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function converts an ACL structure to an ACL text.
+gfs_acl_to_any_text<manvolnum>3</manvolnum> function is more
+functional than this function.
+<citerefentry>
+<refentrytitle>gfs_acl_from_text</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function creates an ACL structure from an ACL text.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_get_perm</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function tests for an ACL permission in an ACL
+permission set.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_check</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function checks an ACL structure for validity.
+And, this function can get the place of the error and the ACL error code.
+This function is more functional than
+gfs_acl_valid<manvolnum>3</manvolnum> function.
+<citerefentry>
+<refentrytitle>gfs_acl_error</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function converts an ACL error code of
+gfs_acl_check<manvolnum>3</manvolnum> function to a text message.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_entries</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function returns the number of entries in an ACL structure.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_equiv_mode</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> checks for an equivalent ACL structure.  An equivalent
+ACL structure has only base ACL entries of tag types
+(GFARM_ACL_USER_OBJ, GFARM_ACL_GROUP_OBJ, GFARM_ACL_OTHER).  And, this
+function can create a file permission bits (gfarm_mode_t) from base
+ACL entries.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_cmp</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function compares two ACL structures.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_from_mode</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function creates an ACL structure from file permission
+bits (gfarm_mode_t).
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_to_any_text</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function converts an ACL structure to an ACL text.  This
+function has some options for output format.  This function is more
+functional than gfs_acl_to_text<manvolnum>3</manvolnum> function.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_to_xattr_value</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> converts an ACL structure to ACL binary data for
+Extended Attribute value.  Before using this function, the ACL
+structure must be sorted by gfs_acl_sort<manvolnum>3</manvolnum>
+function.
+<citerefentry>
+<refentrytitle>gfs_acl_from_xattr_value</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> converts ACL binary data for Extended Attribute value
+to an ACL structure.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>gfs_acl_sort</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function sorts ACL entries of an ACL structure in ACL
+validity order.
+</para>
+<para>
+<citerefentry>
+<refentrytitle>
+gfs_acl_from_text_with_default</refentrytitle><manvolnum>3</manvolnum>
+</citerefentry> function creates two ACL structures (Access ACL and
+Default ACL) from an ACL text which includes "default:" prefix.
+</para>
+</refsect2>
+
+
+<refsect2>
 <title>Error handling</title>
 <para>
 Most Gfarm API returns the Gfarm error code in gfarm_error_t.
