--- a/gfarm_v2/trunk/man/man3/gfarm.3
+++ b/gfarm_v2/trunk/man/man3/gfarm.3
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM" "3" "26 June 2010" "Gfarm" ""
+.TH "GFARM" "3" "04 February 2011" "Gfarm" ""
 
 .SH NAME
 gfarm \- Gfarm file system API library
@@ -82,6 +82,92 @@ The gfs_glob_t must be released by
 time, etc.
 The struct gfs_stat returned by gfs_stat function must be released by
 \fBgfs_stat_free\fR(3) function.
+.SS "ACL (ACCESS CONTROL LIST) OPERATIONS"
+.PP
+\fBgfs_acl_init\fR(3) function is used for the initilization of an ACL
+structure (gfarm_acl_t), and
+\fBgfs_acl_free\fR(3) function is used to release the ACL structure.
+\fBgfs_acl_dup\fR(3) function duplicates an ACL structure.
+.PP
+\fBgfs_acl_create_entry\fR(3) function creates an ACL entry (gfarm_acl_entry_t) in
+an ACL structure, and
+\fBgfs_acl_get_entry\fR(3) function gets an ACL entry from the ACL structure, and
+\fBgfs_acl_delete_entry\fR(3) function removes an ACL entry from the ACL structure.
+.PP
+\fBgfs_acl_valid\fR(3) function checks an ACL structure for validity.
+gfs_acl_check(3) function can check more for
+validity.
+.PP
+\fBgfs_acl_calc_mask\fR(3) function calculates and sets an ACL permissions of
+a GFARM_ACL_MASK type entry in an ACL structure.
+.PP
+\fBgfs_acl_get_tag_type\fR(3) function gets an ACL tag (gfarm_acl_tag_t) (type of
+ACL entry) from an ACL entry.
+\fBgfs_acl_set_tag_type\fR(3) function sets an ACL tag of an ACL entry.
+.PP
+\fBgfs_acl_get_permset\fR(3) function gets an ACL permission-set
+(gfarm_acl_permset_t) from an ACL entry.
+\fBgfs_acl_set_permset\fR(3) function an ACL permission-set of an ACL entry.
+.PP
+\fBgfs_acl_add_perm\fR(3) function adds an ACL permission (gfarm_acl_perm_t) to
+an ACL permission-set.
+\fBgfs_acl_clear_perms\fR(3) clears all ACL permissions from an ACL permission-set.
+\fBgfs_acl_delete_perm\fR(3) function deletes a permission from an ACL permission-set.
+.PP
+\fBgfs_acl_get_qualifier\fR(3) function gets a username/groupname from an ACL entry.
+GFARM_ACL_USER/GFARM_ACL_GROUP tag entries have a username/groupname.
+\fBgfs_acl_set_qualifier\fR(3) function sets a username/groupname of an ACL entry.
+.PP
+\fBgfs_acl_delete_def_file\fR(3) function deletes a Default ACL from a file or directory.
+\fBgfs_acl_get_file\fR(3) function gets an ACL structure of a file or directory.
+\fBgfs_acl_set_file\fR(3) function replaces an ACL structure of a file or directory.
+Before using this function, the ACL structure must be sorted by
+gfs_acl_sort(3) function.
+.PP
+\fBgfs_acl_to_text\fR(3) function converts an ACL structure to an ACL text.
+gfs_acl_to_any_text(3) function is more
+functional than this function.
+\fBgfs_acl_from_text\fR(3) function creates an ACL structure from an ACL text.
+.PP
+\fBgfs_acl_get_perm\fR(3) function tests for an ACL permission in an ACL
+permission set.
+.PP
+\fBgfs_acl_check\fR(3) function checks an ACL structure for validity.
+And, this function can get the place of the error and the ACL error code.
+This function is more functional than
+gfs_acl_valid(3) function.
+\fBgfs_acl_error\fR(3) function converts an ACL error code of
+gfs_acl_check(3) function to a text message.
+.PP
+\fBgfs_acl_entries\fR(3) function returns the number of entries in an ACL structure.
+.PP
+\fBgfs_acl_equiv_mode\fR(3) checks for an equivalent ACL structure.  An equivalent
+ACL structure has only base ACL entries of tag types
+(GFARM_ACL_USER_OBJ, GFARM_ACL_GROUP_OBJ, GFARM_ACL_OTHER).  And, this
+function can create a file permission bits (gfarm_mode_t) from base
+ACL entries.
+.PP
+\fBgfs_acl_cmp\fR(3) function compares two ACL structures.
+.PP
+\fBgfs_acl_from_mode\fR(3) function creates an ACL structure from file permission
+bits (gfarm_mode_t).
+.PP
+\fBgfs_acl_to_any_text\fR(3) function converts an ACL structure to an ACL text.  This
+function has some options for output format.  This function is more
+functional than gfs_acl_to_text(3) function.
+.PP
+\fBgfs_acl_to_xattr_value\fR(3) converts an ACL structure to ACL binary data for
+Extended Attribute value.  Before using this function, the ACL
+structure must be sorted by gfs_acl_sort(3)
+function.
+\fBgfs_acl_from_xattr_value\fR(3) converts ACL binary data for Extended Attribute value
+to an ACL structure.
+.PP
+\fBgfs_acl_sort\fR(3) function sorts ACL entries of an ACL structure in ACL
+validity order.
+.PP
+\fBgfs_acl_from_text_with_default\fR(3) function creates two ACL structures (Access ACL and
+Default ACL) from an ACL text which includes "default:" prefix.
 .SS "ERROR HANDLING"
 .PP
 Most Gfarm API returns the Gfarm error code in gfarm_error_t.
