* fix wrong conjugation.

--- a/gfarm_v2/trunk/man/man5/gfarm_attr.5
+++ b/gfarm_v2/trunk/man/man5/gfarm_attr.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM_ATTR" "5" "04 February 2011" "Gfarm_attr" ""
+.TH "GFARM_ATTR" "5" "07 February 2011" "Gfarm_attr" ""
 
 .SH NAME
 gfarm_attr \- Gfarm Extended Attributes
@@ -21,7 +21,7 @@ Gfarm users can freely use the other names of Extended Attribute.
 .PP
 Everyone can get the Extended Attributes named "gfarm.*".
 Owner or gfarmroot group can modify the Extended Attributes named "gfarm.*".
-The others of Extended Attribute can be readed/modified on the files
+The others of Extended Attribute can be read/modified on the files
 or directories permission.
 .SH "GFARM EXTENDED ATTRIBUTES"
 .PP
