--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm_attr.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm_attr.5.docbook
@@ -42,7 +42,7 @@ Gfarm users can freely use the other names of Extended Attribute.
 <para>
 Everyone can get the Extended Attributes named "gfarm.*".
 Owner or gfarmroot group can modify the Extended Attributes named "gfarm.*".
-The others of Extended Attribute can be readed/modified on the files
+The others of Extended Attribute can be read/modified on the files
 or directories permission.
 </para>
 
